--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -417,7 +417,7 @@
                 let diceX1, diceX2;
                 let diceSet;
                 if (invertColors) {
-                    if (item.player === 'White') {
+                    if (currentPlayer === 'first') {
                         diceX1 = 130;
                         diceX2 = 220;
                         diceSet = diceImages.white;
@@ -427,7 +427,7 @@
                         diceSet = diceImages.black;
                     }
                 } else {
-                    if (item.player === 'White') {
+                    if (currentPlayer === 'first') {
                         diceX1 = 530;
                         diceX2 = 620;
                         diceSet = diceImages.white;
