--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -411,6 +411,7 @@
             drawCheckers('second', blackChecker, positions.second, currentPlayer);
 
             const item = data[current];
+            console.log('Drawing dice for current:', current, 'currentPlayer:', currentPlayer, 'invertColors:', invertColors, 'item.player:', item.player, 'item.dice:', item.dice, 'item.action:', item.action);
             if (item.dice && item.dice.length >= 2 && !['double', 'take', 'win'].includes(item.action)) {
                 const [d1, d2] = item.dice;
                 const diceY = 350;
@@ -421,24 +422,31 @@
                         diceX1 = 130;
                         diceX2 = 220;
                         diceSet = diceImages.white;
+                        console.log('Inverted, first: left white');
                     } else {
                         diceX1 = 530;
                         diceX2 = 620;
                         diceSet = diceImages.black;
+                        console.log('Inverted, second: right black');
                     }
                 } else {
                     if (currentPlayer === 'first') {
                         diceX1 = 530;
                         diceX2 = 620;
                         diceSet = diceImages.white;
+                        console.log('Not inverted, first: right white');
                     } else {
                         diceX1 = 130;
                         diceX2 = 220;
                         diceSet = diceImages.black;
+                        console.log('Not inverted, second: left black');
                     }
                 }
+                console.log('Drawing dice at', diceX1, diceX2, 'with set', diceSet === diceImages.white ? 'white' : 'black', 'd1:', d1, 'd2:', d2);
                 if (diceSet[d1]) ctx.drawImage(diceSet[d1], diceX1, diceY, 60, 60);
                 if (diceSet[d2]) ctx.drawImage(diceSet[d2], diceX2, diceY, 60, 60);
+            } else {
+                console.log('Not drawing dice');
             }
         }
 
