--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -413,14 +413,14 @@
             drawCheckers('second', blackChecker, positions.second, currentPlayerType);
 
             const item = data[current];
-            console.log('Drawing dice for current:', current, 'currentPlayer:', currentPlayer, 'invertColors:', invertColors, 'item.player:', item.player, 'item.dice:', item.dice, 'item.action:', item.action);
+            console.log('Drawing dice for current:', current, 'currentPlayerType:', currentPlayerType, 'invertColors:', invertColors, 'item.player:', item.player, 'item.dice:', item.dice, 'item.action:', item.action);
             if (item.dice && item.dice.length >= 2 && !['double', 'take', 'win'].includes(item.action)) {
                 const [d1, d2] = item.dice;
                 const diceY = 350;
                 let diceX1, diceX2;
                 let diceSet;
                 if (invertColors) {
-                    if (currentPlayer === 'first') {
+                    if (currentPlayerType === 'first') {
                         diceX1 = 130;
                         diceX2 = 220;
                         diceSet = diceImages.white;
@@ -432,7 +432,7 @@
                         console.log('Inverted, second: right black');
                     }
                 } else {
-                    if (currentPlayer === 'first') {
+                    if (currentPlayerType === 'first') {
                         diceX1 = 530;
                         diceX2 = 620;
                         diceSet = diceImages.white;
