--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -234,6 +234,10 @@
 
         <div class="board-footer">
             <div class="move-info" id="moveInfo">Initial Position</div>
+            <div class="pips-below-board">
+                <div class="game-info" id="players-info">
+                </div>
+            </div>
             <div id="controls">
                 <button id="prevBtn" title="Previous Move">
                     <img src="/static/left.png" alt="Previous" style="width: 100%; height: 100%;">
@@ -246,7 +250,7 @@
                 </button>
                 <button id="invertBtn" title="Invert Board">
                     <img src="/static/change_color.png" alt="Invert" style="width: 100%; height: 100%;">
-            </button>
+                </button>
             </div>
         </div>
     </div>
